--- a/src/styles/Comments.scss
+++ b/src/styles/Comments.scss
@@ -3,7 +3,7 @@
 }
 
 .container {
-  background-color: #fff;
+  margin: 20px 0;
 }
 
 button {
@@ -222,4 +222,8 @@ button {
 
 .pointer {
   cursor: pointer;
+}
+
+.col-2 {
+  margin: 15px 0;
 }
