--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -227,3 +227,7 @@ div[id^="react-select-"][id$="-listbox"] {
   align-self: center;
   align-content: center;
 }
+
+.react-syntax-highlighter-line-number {
+  color: #8b8b8b;
+}
